# graphics-course

tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/inflight_frames/shaders/: main.frag  procedural.frag  toy.comp
tasks/local_shadertoy1/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy1/shaders/: toy.comp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/shaders/: UniformParams.h  main.frag  procedural.frag  quad.vert  toy.comp  toy.frag
tasks/shadertoy1/: phong_sphere.md  phong_sphere.shadertoy
tasks/shadertoy2/: buffer_b.shadertoy  image_shader.shadertoy
